<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Row 2 -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="3"
        android:text="@string/GuiText"
        android:textSize="30dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Button -->
        <Button
            android:id="@+id/button"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/ButtonText" />

        <!-- CheckBox -->
        <CheckBox
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="4"
            android:layout_columnSpan="2"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/CheckText" />
    </GridLayout>

    <!-- Row 3 -->
    <GridLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Image Button -->

        <!-- Switch -->

        <ImageButton
            android:layout_width="193dp"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_weight="1"
            android:gravity="fill"
            android:src="@drawable/flag" />

        <Switch
            android:id="@+id/SwitchButton"
            android:layout_width="190dp"
            android:layout_height="108dp"
            android:layout_columnSpan="2"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/SwitchText" />
    </GridLayout>

    <!-- Row 4 -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_columnSpan="2"
            android:layout_weight="1"
            android:gravity="fill"
            android:hint="@string/HintText"
            android:inputType="textPersonName"></EditText>
    </GridLayout>
</GridLayout>
